Seccion 06: 28. Operador "debounceTime" de RxJS

--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
 			<div id="log-container"></div>
 		</div> -->
 
-		<h1>Do some scroll</h1>
+		<!-- <h1>Do some scroll</h1>
 		<div id="progress-bar"></div>
 		<div id="log-container"></div>
 		<div id="scrollable-space"></div>
-		<div id="footer">You've reached the end of the page</div>
+		<div id="footer">You've reached the end of the page</div> -->
+
+		<h1>Write something</h1>
+    <input id="input-box" type="text">
+    <div id="log-container"></div>
 
 		<script src="main.js"></script>
 	</body>
