Seccion 07: 32. Introducción a los HOO, "mergeAll" y "mergeMap"
High Order Observable: Observables que devuelven Observables

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 				right: 20px;
 			} */
 
-			/* #log-container {
+			#log-container {
 				position: fixed;
 				top: 80px;
 				right: 20px;
 				max-width: 320px;
-			} */
+			}
 
-			#log-container {
+			/* #log-container {
 				position: fixed;
 				top: 80px;
 				right: 20px;
@@ -94,7 +94,7 @@
 			}
 			#form > div > * {
 				flex-grow: 1;
-			}
+			} */
 		</style>
 	</head>
 	<body>
@@ -122,11 +122,11 @@
 		<canvas id="drawboard" width="400" height="400"></canvas>
 		<div id="log-container"></div> -->
 
-		<!-- <h1>Get some comments</h1>
+		<h1>Get some comments</h1>
 		<button id="btn">Click me!</button>
-		<div id="log-container"></div> -->
+		<div id="log-container"></div>
 
-		<h1>Submit form</h1>
+		<!-- <h1>Submit form</h1>
 		<form id="form">
 			<div>
 				<label for="username">Name: </label>
@@ -142,7 +142,7 @@
 			</div>
 			<button id="btn" type="button">Add contact</button>
 		</form>
-		<div id="log-container"></div>
+		<div id="log-container"></div> -->
 
 		<script src="main.js"></script>
 	</body>
