--- a/index.html
+++ b/index.html
@@ -96,10 +96,20 @@
 				flex-grow: 1;
 			} */
 
-			#log-container {
+			/* #log-container {
 				max-width: 100px;
 				text-align: center;
 				font-size: 4em;
+			} */
+
+			#drawboard {
+				position: absolute;
+				left: 40px;
+			}
+			#log-container {
+				position: fixed;
+				top: 40px;
+				right: 20px;
 			}
 		</style>
 	</head>
@@ -150,11 +160,15 @@
 		</form>
 		<div id="log-container"></div> -->
 
-		<h1>10s timer</h1>
+		<!-- <h1>10s timer</h1>
 		<div class="butons">
 			<button id="pause-btn">Pause</button>
 			<button id="resume-btn">Resume</button>
 		</div>
+		<div id="log-container"></div> -->
+
+		<h1>The tic-tac-toe game</h1>
+		<canvas id="drawboard" width="400" height="400"></canvas>
 		<div id="log-container"></div>
 
 		<script src="main.js"></script>
